--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-05-12  Vladimir Sedach  <vas@oneofus.la>
+
+        * docs/reference.html (Parenscript Reference Manual): Updated
+        copyright year.
+
 2020-04-26  Vladimir Sedach <vas@oneofus.la>
 
 	* src/compiler.lisp, src/deprecated-interface.lisp,
