Documented and made easier to use

--- a/README
+++ b/README
@@ -4,9 +4,13 @@ because I was unable to fork the project on that site.
 My intent is to modernize the generated JavaScript and make it more
 convenient for general use.
 
+This repo is loacated at https://github.com/blakemcbride/parenscript
+
+See the file README.1ST
+
 Blake McBride
 blake@mcbridemail.com
-https://github.com/blakemcbride/parenscript
+
 
 --------------------------------------------------------------------
 
